--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 .logo-section{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 3rem;
