--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,9 @@ justify-content: space-between;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: full;
-    text-align: center;
+    right: 50%;
+    width: 80%;
+   
     transform: translate(-50%, -50%);
    
 }
@@ -124,14 +125,18 @@ justify-content: space-between;
     background: rgba(218, 172, 172, 0.274);
     color: rgb(46, 46, 46);
     border-radius: 8px;
+    font-weight: 300 ;
+    font-size:2.3rem ;
 }
 .about-text p{
     width: 100%;
-    color: white;
-    font-family: sans-serif;
-    line-height: 1.5rem;
+    color: rgb(248, 246, 246);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.8rem;
     word-spacing: 2px;
     letter-spacing: 1px;
+
+    font-weight: 300 !important;
     background: rgba(31, 30, 30, 0.295);
     padding: 8px 12px 2px 12px;
 }
